# XYBEngine

./: .gitignore  CMakeLists.txt  README.md  Readme.md
Assets/: README.md
BuildTool/: QTBuild.bat  README.md  Run.bat  XYBEngineCMakeBuild.bat  XYBEngineCMakeBuild_MinGW.bat  XYBEngineCMakeOnlyBuild.bat
CMake/: XYBHelpers.cmake
Config/: README.md
Samples/: CMakeLists.txt  README.md
Samples/FirstDemo/: CMakeLists.txt  TestApplication.h  main.cpp
Shaders/: README.md
Source/: CMakeLists.txt  README.md
Source/AI/: README.md
Source/Animation/: README.md
Source/Asset/: README.md
Source/Audio/: README.md
Source/Core/: CMakeLists.txt  README.md
Source/Core/Private/: Engine.cpp  Log.cpp  LogModule.cpp  ModuleManager.cpp
Source/Core/Public/: Core.h  Engine.h  IApplication.h  IModule.h  Log.h  LogModule.h  ModuleManager.h
Source/ECS/: README.md
Source/Editor/: CMakeLists.txt
Source/Editor/Core/Private/: CreateEditorFactory.cpp  CreateEditorRuntime.cpp  EditorApplication.cpp  EditorLauncher.cpp  IEditorFactory.cpp  IEditorPanel.cpp  IEditorWindow.cpp  IEdtorApplication.cpp
Source/Editor/Core/Public/: CreateEditorFactory.h  CreateEditorRuntime.h  EditorApplication.h  EditorLauncher.h  EditorRuntime.h  IConsoleWindow.h  IEditorApplication.h  IEditorFactory.h  IEditorPanel.h  IEditorShell.h  IEditorWindow.h
Source/Editor/QtBackend/Application/Private/: QtApplication.cpp
Source/Editor/QtBackend/Application/Public/: QtApplication.h
Source/Editor/QtBackend/ConsoleWindow/: CMakeLists.txt
Source/Editor/QtBackend/ConsoleWindow/Private/: ConsoleWindow.cpp  QtConsoleWindow.cpp
Source/Editor/QtBackend/ConsoleWindow/Public/: ConsoleWindow.h  QtConsoleWindow.h  QtConsoleWindow.ui
Source/Editor/QtBackend/MainWindow/Private/: QtMainWindow.cpp
Source/Editor/QtBackend/MainWindow/Public/: QtMainWindow.h
Source/Editor/QtBackend/Panel/Private/: DX12SceneViewport.cpp  DX12ViewportWindow.cpp  DX12ViewportWindow.h  QtConsolePanel.cpp  QtSceneViewportPanel.cpp
Source/Editor/QtBackend/Panel/Public/: DX12SceneViewport.h  QtConsolePanel.h  QtSceneViewportPanel.h
Source/Editor/QtBackend/Private/: QtApplication.cpp  QtEditorRuntime.cpp  QtFactory.cpp
Source/Editor/QtBackend/Public/: QtApplication.h  QtFactory.h  QtHelper.h
Source/Editor/QtBackend/Rendering/Private/: DX12TriangleRenderer.cpp
Source/Editor/QtBackend/Rendering/Public/: DX12TriangleRenderer.h
Source/Editor/QtBackend/Shell/Private/: QtMainShell.cpp  QtMainWindow.cpp
Source/Editor/QtBackend/Shell/Public/: QtMainShell.h  QtMainWindow.h
Source/Editor/QtBackend/ui/: QtConsolePanel.ui  QtMainShell.ui  QtMainWindow.ui  QtSceneViewportPanel.ui
Source/Input/: README.md
Source/Math/: README.md
Source/Network/: README.md
Source/Physics/: README.md
Source/Platform/: CMakeLists.txt  README.md
Source/Platform/Public/: INativeWindow.h
Source/Platform/Windows/Private/: WindowsNativeWindow.cpp
Source/Platform/Windows/Public/: WindowsNativeWindow.h
Source/RHI/: README.md
Source/Render/: README.md
Source/Runtime/: CMakeLists.txt  README.md
Source/Runtime/Private/: Engine.cpp  IApplication.cpp  ModuleManager.cpp
Source/Runtime/Public/: Engine.h  IApplication.h  LogModule.h  ModuleManager.h
Source/Scene/: README.md
Source/Scripting/: README.md
Source/Serialization/: README.md
Source/Tools/: README.md
Source/Tools/AssetProcessor/: README.md
Source/Tools/Debugger/: README.md
Source/Tools/Editor/: README.md
Source/UI/: README.md
Tests/: README.md
UIResource/: Resource.qrc
UIResource/ComputeShader/: Contour.computeshader  CreateSDF.computeshader  DrawLine.computeshader  FillBeizer.computeshader  Fill_InSide.computeshader  Fill_OutSide.computeshader  Layer_AlphaBlend.computeshader  Layer_MaskBlend.computeshader  MultiLayer_AlphaBlend.computeshader  Pen_AlphaBlend.computeshader
UIResource/Mesh/: MultiCube.fbx  Torus.fbx
UIResource/RenderPipeline/: Default.PaintRenderPipeline
UIResource/Shader/: BaseMaterial.shader  DebugITexture.shader  Gizmo_Lines.shader  Gizmo_WireCube.shader  IDColor.shader  IDColorNoInstance.shader  Post.shader  Selection.shader
UIResource/Skin/: CustomSkin.skin  Dark.skin  Dark03.skin  Darkback.skin  Unreal.skin
UIResource/StaticMesh/: Coordinate.fbx  Coordinate_Rotate.fbx  Coordinate_Scale.fbx  Coordinate_Translate.fbx  Cube.fbx  Cylinder.fbx  Face.fbx  FaceMultiMaterial.fbx  Grid.fbx  Human.fbx  MatBall_01.fbx  MatBall_03.fbx  Sphere.fbx  SubPost.fbx  TestScene.fbx  Tours.fbx
UIResource/Texture/: Icon.psd  Icon02.psd  Icon03.psd
